domain/src/main/java/com/example/domain/core/error/Failure.kt
package com.example.domain.core.error

sealed interface Failure